fix smartphone overlapping issue

--- a/sites/all/themes/impetus/assets/stylesheets/screen.css
+++ b/sites/all/themes/impetus/assets/stylesheets/screen.css
@@ -406,3 +406,20 @@ overflow:hidden;
 float:left;
 }
 }
+
+@media (max-width:480px) {
+  body {
+  	padding-top:0px;
+  	margin-top:0px !important;
+  }
+  #main-wrapper {
+  	margin-top:0px !important;
+  }
+  ul.spaces-section-dropdown ul.nested {
+	position:absolute !important;
+	width:100% !important;
+  }
+	#panels-ipe-control-container{
+	z-index:50 !important;
+  }
+}
